fixing misalignment

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -21,6 +21,7 @@
 
 .index_title_set {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     width: 30%;
